// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/riw/app/translate/findTranslations 01 nothing gets nothing 1`] = `
Object {
  "armdu": Array [],
  "locale": Object {},
}
`;

exports[`lib/riw/app/translate/findTranslations 02 no db: md misses 1`] = `
Object {
  "armdu": Array [
    Object {
      "defaultMessage": "a",
      "fabs": "/a.js",
      "id": "md1",
      "locale": "en-up",
    },
  ],
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
  },
}
`;

exports[`lib/riw/app/translate/findTranslations 03 db missing target locale: md ignored 1`] = `
Object {
  "armdu": Array [],
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
  },
}
`;

exports[`lib/riw/app/translate/findTranslations 04 db has missing defaultMessage: md misses 1`] = `
Object {
  "armdu": Array [
    Object {
      "defaultMessage": "a",
      "description": "a desc",
      "fabs": "/a.js",
      "id": "md1",
      "locale": "en-up",
    },
  ],
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
  },
}
`;

exports[`lib/riw/app/translate/findTranslations 05 db has missing defined description: md misses 1`] = `
Object {
  "armdu": Array [
    Object {
      "defaultMessage": "a",
      "description": "a desc",
      "fabs": "/a.js",
      "id": "md1",
      "locale": "en-up",
    },
  ],
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
  },
}
`;

exports[`lib/riw/app/translate/findTranslations 06 db has missing locale: md misses 1`] = `
Object {
  "armdu": Array [
    Object {
      "defaultMessage": "a",
      "description": "a desc",
      "fabs": "/a.js",
      "id": "md1",
      "locale": "en-up",
    },
  ],
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
  },
}
`;

exports[`lib/riw/app/translate/findTranslations 07 simple match works 1`] = `
Object {
  "armdu": Array [],
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
    "en-up": Object {
      "md1": "A",
    },
  },
}
`;

exports[`lib/riw/app/translate/findTranslations 08 no description with default works 1`] = `
Object {
  "armdu": Array [],
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
    "en-up": Object {
      "md1": "A",
    },
  },
}
`;

exports[`lib/riw/app/translate/findTranslations 09 simple multi 1`] = `
Object {
  "armdu": Array [
    Object {
      "defaultMessage": "c1",
      "fabs": "/c.js",
      "id": "md2",
      "locale": "en-ne",
    },
    Object {
      "defaultMessage": "a1",
      "description": "a1 desc",
      "fabs": "/a.js",
      "id": "md3",
      "locale": "en-ne",
    },
  ],
  "locale": Object {
    "en-aa": Object {
      "md1": "a1",
      "md2": "c1",
      "md3": "a1",
    },
    "en-ne": Object {
      "md1": "1A",
    },
    "en-up": Object {
      "md1": "A1",
      "md2": "C1",
      "md3": "A1 DESC",
    },
  },
}
`;
